--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 #header {
-  height: 170px;
+  height: 171px;
   background: url("%%header-blur-bg11%%") left bottom no-repeat;
-  z-index: 0; }
+  z-index: 0;
+  overflow: hidden !important;
+  border-bottom: none; }
 
 #header-bottom-left {
   background: url("%%blue-overlay-bg%%");
@@ -129,7 +131,7 @@
   left: 0px;
   top: 0px;
   position: absolute;
-  width: 100%;
+  width: 10000px;
   height: 171px;
   -webkit-animation: sidescroll 60s linear infinite;
   -moz-animation: sidescroll 60s linear infinite;
